fixed Input spacing

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -3,6 +3,7 @@
   margin-top: 20px;
   margin-bottom: 15px;
 }
+
 .Dictionary h1 {
   color: #f7f7e8;
   font-size: 27px;
@@ -19,19 +20,20 @@
 }
 
 .Dictionary input {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 10px;
   border: 1px solid #557174;
   box-shadow: rgba(37, 39, 89, 0.2) 0 5px 10px 0;
   border-radius: 6px;
   padding: 15px;
-  width: 500px;
   font-size: 18px;
+  width: 80%;
 }
 
-.Dictionary .hint {
+.Dictionary small {
   color: #f7f7e8;
-  position: relative;
-  right: 110px;
-  margin-top: 5px;
+  margin-right: 200px;
+  margin-top: 10px;
   font-size: 16px;
-  font-weight: 900px;
 }
